# fast_granja

./: .env-develop  .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 1f9ffaa08a85_adicionando_flock.py  3107c97a2f0a_criando_banco.py  3523c365e965_criação_tabela_chicken_death.py  8ac9113dad9b_trocando_isactive_por_isactive.py  99cbdfa43053_criação_tabelas_de_tipos_e_adicão_do_.py  9fd26cadda62_tabela_dailyeggsmodel_relação_com_flock.py  c615020ec165_adicionando_campo_price_em_flock.py  c8c1fe71756f_adição_de_unique_em_chickendeathreason_.py  fbfe652544ba_adicionando_campo_isactive_em_flock.py
fast_granja/: admin_create_script.py  app.py  database.py  models.py  security.py  settings.py
fast_granja/router/: annotated.py  auth.py  eggs.py  eggs_router.py  flock.py  flock_router.py  user.py  user_router.py
fast_granja/router/chicken/: death.py  death_router.py  race.py  race_router.py  reason.py  reason_router.py
fast_granja/schema/: chicken.py  chicken_schema.py  eggs.py  flock_schema.py  user_.py  user_schema.py
