[project]
name = "fast-granja"
version = "0.1.0"
description = ""
authors = [
    {name = "João Martins", email = "joaommn1998@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.13,<0.116.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pwdlib[argon2] (>=0.2.1,<0.3.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "tzdata (>=2025.2,<2026.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "ruff (>=0.12.3,<0.13.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "fast_granja"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = 'fastapi dev fast_granja/app.py'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
